--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,29 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    /* background-color: #f4f4f4; */
     text-align: center;
+    color: rgba(245, 245, 245, 0.781);
+    text-shadow: 1px 2px 15px rgba(0, 0, 0, 0.555);
+
+    text-decoration: double;
+
+    background: linear-gradient(-70deg, #5e627b80, #7e474d86, #d6c1c481);
+  background-size: 200% 100%;
+  animation: gradientAnimation 5s linear infinite alternate;
 }
 
 header {
     padding: 2px;
+    background-color: #8d6b6f86;
+    height: 70px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.507);
+    text-shadow: 1px 2px 15px rgba(0, 0, 0, 0.555);
+    color: rgba(248, 248, 248, 0.568);
+
+    background: linear-gradient(-70deg, #5e627b, #7e474d, #d6c1c4);
+    background-size: 200% 100%;
+    animation: gradientAnimation 5s linear infinite alternate;
 }
 
 section {
@@ -19,11 +36,17 @@ section {
 
 .card {
     padding: 30px;
-    background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* background-color: #fff; */
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.418);
     border-radius: 8px;
     overflow: hidden;
     transition: box-shadow 0.3s;
+
+    background: linear-gradient(-45deg, #2d2d2eb0, #ecbbc186, #8681867a);
+  background-size: 200% 100%;
+  animation: gradientAnimation 5s linear infinite alternate;
+
+    
 }
 
 .card:hover {
@@ -39,7 +62,7 @@ section {
 }
 
 .cover-art {
-    border: 5px solid white ;
+    border: 5px solid rgba(255, 255, 255, 0.856) ;
     border-radius: 10px;
     box-shadow: 0 0 10px black;
     max-width: 200px;
@@ -50,13 +73,25 @@ button {
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
-    background-color: #4CAF50;
-    color: #fff;
+    background-color: #f8f7f7b6;
+    color: #664444ad;
     border: none;
     border-radius: 0 0 8px 8px;
     transition: background-color 0.3s;
+    box-shadow: 0 0 2px rgb(82, 35, 35);
+  -webkit-tap-highlight-color: transparent;
+
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #cececeb7;
+}
+
+button:active{
+    background-color: #918f8f91;
+    box-shadow: none;
+}
+
+h5{
+    color: rgba(255, 255, 255, 0.514);
 }
